DOMjudge Programming Contest Judging System

Version 4.0.5 - DEV
-------------------

Version 4.0.4 - 27 October 2014
-------------------------------
 - Fix generated SQL examples file.
 - Add Apache 2.4 example configuration steps to manual.
 - API 'configuration' is now only available to jury and
   'submission' is now limited to valid submissions.
 - Fix ICPC teams import for changes on the webservice side.
 - Fix ICPC standings upload to prevent accidental upload
   of frozen instead of final scoreboard.
 - Judgehost outputs a warning when not using cgroups.

Version 4.0.3 - 6 October 2014
------------------------------
 - Fix diff display on team submission output page when showing the
   result of sample testcases is enabled (#137, thanks Ruud Koot).
 - In Haskell run script, set maximum stack size to someting small to
   prevent ghc from running out of memory (#138, thanks Ruud Koot).
 - Fix problem autoselect in team page (thanks Jeroen Bransen).
 - Improve chroot documentation (thanks Rob Franken).
 - Fix API returning submissions after freeze and disabled teams,
   and add a 'user' endpoint (thanks Nicky Gerritsen).

Version 4.0.2 - 16 August 2014
------------------------------
 - Fix 'compare' and 'float' executable scripts.
 - Improve log messages during compilation.
 - Minor documentation improvements.

Version 4.0.1 - 14 August 2014
------------------------------
 - Install genrestapi and www/auth/*. Thanks Glenn Martin for reporting.
 - Remove Bisonc++/Flexc++ checks from configure.
 - Detect Apache group and other minor fixes in configure.
 - Add RedHat installation commands and miscellaneous other
   documentation improvements.

Version 4.0.0 - 22 July 2014
----------------------------
 - Fix chroot create script when using an APT proxy.
 - Fix broken link to problem download for teams and public.
 - Small tweaks to new judgehost load display.
 - Display problem/language name instead of ID above submission lists.