@@ -2,6 +2,7 @@ DOMjudge Programming Contest Judging System
 
 Version 4.0.5 - DEV
 -------------------
+ - Add fixed/improved version of simulate_contest script.
 
 Version 4.0.4 - 27 October 2014
 -------------------------------
